oxiplate-derive/tests/broken/writ/writ-without-expression.stderr
error: Unexpected character in expression
 --> tests/broken/writ/writ-without-expression.rs:4:23
  |
4 | #[oxiplate_inline("{{ ` }}")]
  |                       ^
